# xmlabit

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: xlogger.cpp  xlogger.h  xmlabit.cpp
test/: books.xml  books2.xml  books3.xml
